# pos-ner

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  application.py  docker-compose.yml  inference_onnx_model.py  prepare_onnx_model.py  pyproject.toml  requirements.txt  test.py  training.py
dataset/: data.tsv
documentations/: ONNX_testing.md  data_preparation_and_training.md  fastapi.md  prepare_onnx_model.md  test.md
domain/models/: __init__.py  prediction_payload.py  result.py  token.py
domain/pos_ner_prediction/: __init__.py  pos_ner_prediction.py
utils/: logger.py
