[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Rupak167 <rupak.cseruet1102@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.17.0"
pydantic = "^2.8.2"
environs = "^11.0.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
